--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <h1>ESTE ES EL TITULO DEL CUERPO</h1>
         <h2> TITULO DOS</h2>
         <h2>TITULO TRES</h2>
-        <h1>ESTE ES EL TITULO DEL CUERPO</h1>
+        <h1>TITULO CUATRO</h1>
+        <h1>TITULO CINCO</h1>
+        <h1>TITULO SEIS</h1>
+        <h1>TITULO SIETE</h1>
+
 
     </div>
 </body>
